--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "untitled",
+  "name": "adopt-me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
